[package]
name = "develop-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
#ssh2 = "0.9.4"
tokio = { version = "1.29.1", features = ["full"]}
async-trait = "0.1.72"
anyhow = "1.0.72"

ssh_jumper = "0.4.0"
async-io = "1.13.0"
async-ssh2-lite = "0.2.2"
futures = "0.3.28"
futures-lite = "1.13.0"
dirs = "5.0.1"
platform-dirs = "0.3.0"

